Avoid treating the Griffin PowerMate knob as a ums(4). Should fix PR/19445.